--- a/phase1/cpu_phase1.qsf
+++ b/phase1/cpu_phase1.qsf
@@ -66,7 +66,7 @@ set_global_assignment -name VERILOG_FILE encoder_32_5.v
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH division_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH rol_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME addition_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id addition_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME addition_tb -section_id addition_tb
@@ -89,13 +89,57 @@ set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id nega
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id not_tb
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id multiplication_tb
 set_global_assignment -name VERILOG_FILE division_tb.v
-set_global_assignment -name EDA_TEST_BENCH_FILE addition_tb.v -section_id addition_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE negate_tb.v -section_id negate_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE not_tb.v -section_id not_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE multiplication_tb.v -section_id multiplication_tb
 set_global_assignment -name EDA_TEST_BENCH_NAME division_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id division_tb
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id division_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME division_tb -section_id division_tb
+set_global_assignment -name VERILOG_FILE shr_tb.v
+set_global_assignment -name VERILOG_FILE shr_bits.v
+set_global_assignment -name EDA_TEST_BENCH_NAME shr_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id shr_tb
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id shr_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME shr_tb -section_id shr_tb
+set_global_assignment -name VERILOG_FILE shra_bits.v
+set_global_assignment -name VERILOG_FILE shra_tb.v
+set_global_assignment -name EDA_TEST_BENCH_NAME shra_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id shra_tb
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id shra_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME shra_tb -section_id shra_tb
+set_global_assignment -name VERILOG_FILE shl_tb.v
+set_global_assignment -name VERILOG_FILE shl_bits.v
+set_global_assignment -name EDA_TEST_BENCH_NAME shl_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id shl_tb
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id shl_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME shl_tb -section_id shl_tb
+set_global_assignment -name VERILOG_FILE shla_tb.v
+set_global_assignment -name VERILOG_FILE shla_bits.v
+set_global_assignment -name EDA_TEST_BENCH_NAME shla_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id shla_tb
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id shla_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME shla_tb -section_id shla_tb
+set_global_assignment -name VERILOG_FILE ror_tb.v
+set_global_assignment -name VERILOG_FILE ror_bits.v
+set_global_assignment -name EDA_TEST_BENCH_NAME ror_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ror_tb
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id ror_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ror_tb -section_id ror_tb
+set_global_assignment -name VERILOG_FILE rol_tb.v
+set_global_assignment -name VERILOG_FILE rol_bits.v
+set_global_assignment -name EDA_TEST_BENCH_FILE addition_tb.v -section_id addition_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE negate_tb.v -section_id negate_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE not_tb.v -section_id not_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE multiplication_tb.v -section_id multiplication_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE division_tb.v -section_id division_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE shr_tb.v -section_id shr_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE shra_tb.v -section_id shra_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE shl_tb.v -section_id shl_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE shla_tb.v -section_id shla_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE ror_tb.v -section_id ror_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME rol_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id rol_tb
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id rol_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME rol_tb -section_id rol_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE rol_tb.v -section_id rol_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE or_tb.v
+set_global_assignment -name VERILOG_FILE or_bits.v
