--- a/phase2/cpu_phase2.qsf
+++ b/phase2/cpu_phase2.qsf
@@ -87,13 +87,29 @@ set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH addition_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH ldi_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME addition_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id addition_tb
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id addition_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME addition_tb -section_id addition_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE addition_tb.v -section_id addition_tb
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VERILOG_FILE ram.v
+set_global_assignment -name VERILOG_FILE ld_tb.v
+set_global_assignment -name EDA_TEST_BENCH_NAME ld_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ld_tb
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id ld_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ld_tb -section_id ld_tb
+set_global_assignment -name MIF_FILE ram.mem
+set_global_assignment -name VERILOG_FILE decoder_4_16.v
+set_global_assignment -name VERILOG_FILE select_and_encode.v
+set_global_assignment -name VERILOG_FILE ldi_tb.v
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name EDA_TEST_BENCH_FILE addition_tb.v -section_id addition_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE ld_tb.v -section_id ld_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME ldi_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ldi_tb
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id ldi_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ldi_tb -section_id ldi_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE ldi_tb.v -section_id ldi_tb
