--- a/phase3/cpu_phase2.qsf
+++ b/phase3/cpu_phase2.qsf
@@ -164,3 +164,4 @@ set_global_assignment -name EDA_TEST_BENCH_FILE andi_tb.v -section_id andi_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE mflo_tb.v -section_id mflo_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE mfhi_tb.v -section_id mfhi_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE control_unit.v
