--- a/phase3/cpu_phase2.qsf
+++ b/phase3/cpu_phase2.qsf
@@ -87,7 +87,7 @@ set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH ld_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH control_unit_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME addition_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id addition_tb
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "400 ns" -section_id addition_tb
@@ -152,6 +152,12 @@ set_global_assignment -name EDA_TEST_BENCH_NAME mfhi_tb -section_id eda_simulati
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id mfhi_tb
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "200 ns" -section_id mfhi_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME mfhi_tb -section_id mfhi_tb
+set_global_assignment -name VERILOG_FILE control_unit.v
+set_global_assignment -name VERILOG_FILE control_unit_tb.v
+set_global_assignment -name EDA_TEST_BENCH_NAME control_unit_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id control_unit_tb
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "500 ns" -section_id control_unit_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME control_unit_tb -section_id control_unit_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE addition_tb.v -section_id addition_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE ld_tb.v -section_id ld_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE ldi_tb.v -section_id ldi_tb
@@ -163,5 +169,7 @@ set_global_assignment -name EDA_TEST_BENCH_FILE ori_tb.v -section_id ori_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE andi_tb.v -section_id andi_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE mflo_tb.v -section_id mflo_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE mfhi_tb.v -section_id mfhi_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE control_unit_tb.v -section_id control_unit_tb
+set_global_assignment -name VERILOG_FILE pc_register.v
+set_global_assignment -name VERILOG_FILE zero_register.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name VERILOG_FILE control_unit.v
